--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 <!--Links and Language-->
 <meta charset="UTF-8">
     <title>Crystal Collector</title>
-<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
-<!--
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 </script>
-<script src="assets/javascript/game.js"></script>
--->
+<script src="assets/javascript/game.js"></script>  
 </head>    
 <body>
 <!--Main Title On My Page-->
@@ -20,8 +18,10 @@
         <h1>The Crystal Collector</h1>
     </div>
     <br>
+<!--
     <br>
     <br>
+-->
     <div id class="directions">
             <h2>Read the directions below to play the game.</h2>
     </div>
@@ -30,145 +30,40 @@
     <br>
             <div id="sequence">
             <ul>
-                <li><p>You will be given a random number at the start of the game.</p></li>
-    <br>
+                <li>You will be given a random number at the start of the game.</li>
+    
                 <li>There are four crystals each having a random value. By clicking on a crystal you will add a specific amount of points to your total score.</li> 
-    <br>
+   
                 <li>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</li> 
-    <br>
+ 
                 <li>Eachtime when the game starts, the game will change the values of each crystal</li>
             </ul>
             </div>
     <br> 
     <br>
 <!--Events I need to make happen in Javascript.-->
-        <div id class="events">   
+        <div class="events">   
             <div class="numberEvent">
-                <h2>Target Number:</h2>
-            <div id="randomEvent">
-            </div>
+                <h2>Target Number:<span id="randomEvent"></span></h2>
             </div>
 	        <div class="wins-losses">
-		       <h2>Wins:</h2>
-               <div id= "playerWins">
-               </div>
-			   <h2>Losses:</h2> 
-            <div id= "playerlosses">
+                <h2>Wins:<span id= "playerWins"></span></h2>
+			   <h2>Losses:<span id= "playerLosses"></span></h2> 
             </div>
-	        </div>
             <div class="total">
-		      <h2>Your Score:</h2>
-            <div id="grandTotal">
+		      <h2>Your Score:<span id="grandTotal"></span></h2>
             </div>
-	        </div>
         </div>
-    <script>
-    // It's good practice to start using it now
-$(document).ready(function(){
-var Random=Math.floor(Math.random()*79+8)
-  // Choose a random number to be shown at the start of the game
-  // Pick a number between 19 - 120
-  //
-  $('#randomEvent').text(Random);
  
-  var ccone= Math.floor(Math.random()*9+1)
-  var cctwo= Math.floor(Math.random()*9+1)
-  var ccthree= Math.floor(Math.random()*9+1)
-  var ccfour= Math.floor(Math.random()*9+1)
-
-  var score= 0; 
-  var wins= 0;
-  var losses = 0;
-//Define my variables
-$('#playerWins').text(wins);
-$('#playerLosses').text(losses);
-//This will make the game start over
-function reset(){
-      Random=Math.floor(Math.random()*79+8);
-      console.log(Random)
-      $('#randomEvent').text(Random);
-      num1= Math.floor(Math.random()*9+1);
-      num2= Math.floor(Math.random()*9+1);
-      num3= Math.floor(Math.random()*9+1);
-      num4= Math.floor(Math.random()*9+1);
-      score= 0;
-      $('#grandtotal').text(score);
-      } 
-//adds the wins to the score
-function winning(){
-alert("Good for You");
-  wins++; 
-  $('#playerWins').text(wins);
-  reset();
-}
-///losses
-function losing(){
-alert ("You can do better!");
-  losses++;
-  $('#losses').text(losses);
-  reset()
-}
-//click event for the crystals
-  $('#crystal1').on ('click', function(){
-    score = score + num1;
-    console.log("New score= " + score);
-    $('#grandTotal').text(score); 
-        if (score == Random){
-          winning();
-        }
-        else if ( score > Random){
-          losing();
-        }   
-  })  
-  $('#crystal2').on ('click', function(){
-    score = score + num2;
-    console.log("New score= " + score);
-    $('#grandTotal').text(score); 
-        if (score == Random){
-          winning();
-        }
-        else if ( score > Random){
-          losing();
-        } 
-  })  
-  $('#crystal3').on ('click', function(){
-    score = score + num3;
-    console.log("New score= " + score);
-    $('#grandTotal').text(score;
-//win-lose
-          if (score == Random){
-          winning();
-        }
-        else if ( score > Random){
-          losing();
-        } 
-  })  
-  $('#crystal4').on ('click', function(){
-    score = score + num4;
-    console.log("New score= " + score);
-    $('#grandTotal').text(score); 
-      
-          if (score == Random){
-          winning();
-        }
-        else if ( score > Random){
-          losing();
-        }
-  });   
-});
-    </script>
  <!--Crystals-->
         <div class="crystals"> 
             <img id="crystal1" 
             src="assets/images/4-Star_Crystal.png" alt="orangecrystal"> 
             <img id="crystal2" src="assets/images/Crystal_ironman.png" alt="blueredcrystal">
             <img id="crystal3" src="assets/images/3-Star_Crystal.png" alt="bluecrystal">
-            <img id="crystals4" src="assets/images/crystal_multi_4thofjuly.png" alt="redcrystal">
-          </div> 
+            <img id="crystal4" src="assets/images/crystal_multi_4thofjuly.png" alt="redcrystal">
+        </div> 
             <footer><h3><center>&copy; Copyright 2016 Monique Hawkins</center></h3>
-            </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-    </script>
-    <script src="assets/javascript/game.js"></script>   
+            </footer> 
     </body>
 </html>
